WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282385
Nullptr crash under ContainerQueryEvaluator::featureEvaluationContextForQuery computing style for disconnected <title>
https://bugs.webkit.org/show_bug.cgi?id=282385
Summary
Nullptr crash under ContainerQueryEvaluator::featureEvaluationContextForQuery...
Antti Koivisto
Reported
2024-10-31 06:31:13 PDT
We shouldn't do that.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2024-10-31 06:31:31 PDT
rdar://137177847
Antti Koivisto
Comment 2
2024-10-31 06:38:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35991
EWS
Comment 3
2024-11-04 05:38:44 PST
Committed
286078@main
(bf84b98bc5ae): <
https://commits.webkit.org/286078@main
> Reviewed commits have been landed. Closing PR #35991 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug