Nullptr crash under ContainerQueryEvaluator::featureEvaluationContextForQuery computing style for disconnected <title> https://bugs.webkit.org/show_bug.cgi?id=282385 rdar://137177847

Reviewed by Ryosuke Niwa.

We crash with null documentElement() because it is possible to enter style resolution
with a disconnected element via HTMLTitleElement::childrenChanged.

* LayoutTests/fast/dom/disconnected-title-style-crash.html: Added.
* Source/WebCore/html/HTMLTitleElement.cpp:
(WebCore::HTMLTitleElement::insertedIntoAncestor):

Update title on insertion when connected.

(WebCore::HTMLTitleElement::removedFromAncestor):
(WebCore::HTMLTitleElement::childrenChanged):

Only update the title if we are connected.

(WebCore::HTMLTitleElement::computedTextWithDirection):

Remove the style resolution path used when disconnected.

* Source/WebCore/style/StyleResolver.cpp:
(WebCore::Style::Resolver::State::State):

Assert we only compute style for connected elements.

Canonical link: https://commits.webkit.org/286078@main